--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -133,6 +133,7 @@ body {
   margin: auto;
   font-family: "Work Sans";
   font-size: 14px;
+  background: #fffef8;
 }
 header {
   display: flex;
@@ -224,7 +225,7 @@ li:hover {
   background-color: #fff;
 }
 
-.filters button:hover {
+.filters button:focus {
   background-color: #1d6154;
   color: #fff;
 }
@@ -282,8 +283,91 @@ input[type="submit"] {
   border-radius: 60px;
 }
 
+footer {
+  background-color: #fff;
+  width: 100vw;
+  height: 60px;
+  position: absolute;
+  left: 0;
+}
+
 footer nav ul {
   display: flex;
   justify-content: flex-end;
-  margin: 2em;
+  padding: 24px 107px 0 0;
+}
+
+footer nav ul li {
+  color: #000;
+  font-family: "Work Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+
+.logPage {
+  display: flex;
+  flex-direction: column;
+  margin-top: 150px;
+}
+
+.logPage h1 {
+  color: #1d6154;
+  text-align: center;
+  font-family: "Syne";
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.logForm {
+  display: flex;
+  flex-direction: column;
+  padding: 0 33%;
+  padding-top: 50px;
+}
+
+.logForm label {
+  color: #3d3d3d;
+  font-family: "Work Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.logForm input {
+  width: 379px;
+  height: 51px;
+  background: #fff;
+  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+  margin-top: 7px;
+  border: none;
+}
+
+.logForm .password {
+  margin-top: 30px;
+}
+
+.logPage button {
+  border-radius: 60px;
+  background: #1d6154;
+  width: 179px;
+  height: 36px;
+  color: #fff;
+  font-family: "Syne";
+  font-size: 14px;
+  border: none;
+  margin: 37px auto 28px auto;
+}
+
+.logPage a {
+  color: #3d3d3d;
+  line-height: normal;
+  margin: 0 auto 350px auto;
+}
+
+.logIcn {
+  font-weight: 600;
 }
