--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -401,6 +401,7 @@ footer nav ul li {
   align-items: center;
   gap: 14px;
   background-color: #000;
+  z-index: 1000;
 }
 
 .modeEditor {
@@ -446,6 +447,28 @@ footer nav ul li {
   cursor: pointer;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(
+    0,
+    0,
+    0,
+    0.5
+  ); /* Opacité de fond (ajustez selon vos besoins) */
+  z-index: 999; /* Assurez-vous que l'overlay est au-dessus de tous les autres éléments */
+  display: none; /* Initialement masqué */
+}
+
+.overlay.active {
+  display: block; /* Afficher l'overlay lorsque la classe active est présente */
+}
+.overlay:not(.modalContainer) {
+  pointer-events: none; /* Ignorer les événements pointer (clics, etc.) sur l'overlay */
+}
 .modalContainer {
   display: flex;
   position: fixed;
@@ -455,6 +478,7 @@ footer nav ul li {
   left: 34%;
   top: 10%;
   border-radius: 10px;
+  z-index: 1000;
 }
 
 .fa-times {
@@ -469,10 +493,6 @@ footer nav ul li {
   text-align: center;
   font-size: 26px;
   padding-top: 60px;
-}
-
-.actualGallery {
-  margin: 46px auto 67px auto;
 }
 
 .underBar {
@@ -516,4 +536,100 @@ footer nav ul li {
 .actualGallery img {
   width: 78.123px;
   height: 104.08px;
+}
+
+.fa-arrow-left {
+  font-size: 24px;
+  top: 26px;
+  left: 30px;
+  position: absolute;
+  cursor: pointer;
+}
+
+.modulePhoto {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 46px 105px 67px 105px;
+  gap: 6px;
+  border-radius: 5px;
+  background: #e8f1f6;
+  width: 420px;
+  height: 169px;
+}
+
+.fa-image {
+  font-size: 76px;
+  color: #b9c5cc;
+}
+
+.btnPhoto {
+  border-radius: 50px;
+  background: #cbd6dc;
+  width: 173px;
+  height: 36px;
+  cursor: pointer;
+  border: none;
+  color: #306685;
+  font-family: "Work Sans";
+  font-size: 14px;
+}
+
+.textPhoto {
+  color: #444;
+  font-family: "Work Sans";
+  font-size: 10px;
+}
+
+.modalContainer form {
+  display: flex;
+  flex-direction: column;
+  width: 420px;
+  margin: auto;
+}
+
+.modalContainer label {
+  color: #3d3d3d;
+  font-family: "Work Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 10px;
+}
+
+.modalContainer input {
+  margin-bottom: 21px;
+}
+
+.modalContainer select {
+  margin-bottom: 47px;
+  cursor: pointer;
+}
+
+.modalContainer input,
+select {
+  background: #fff;
+  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+  height: 51px;
+  color: #444;
+  font-family: "Work Sans";
+  font-size: 14px;
+  border: none;
+  outline: none;
+}
+
+.validateBtn {
+  cursor: pointer;
+  width: 237px;
+  height: 36px;
+  flex-shrink: 0;
+  border-radius: 60px;
+  border: none;
+  margin: 32px auto 55px auto;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+  background: #a7a7a7;
 }
