--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -247,6 +247,7 @@ nav li {
 
 .gallery img {
   width: 100%;
+  height: 457px;
 }
 #contact {
   width: 50%;
@@ -557,6 +558,7 @@ footer nav ul li {
   background: #e8f1f6;
   width: 420px;
   height: 169px;
+  position: relative;
 }
 
 .fa-image {
@@ -632,4 +634,19 @@ select {
   font-size: 14px;
   font-weight: 700;
   background: #a7a7a7;
+}
+
+.modulePhoto img {
+  position: absolute;
+  width: 129px;
+  height: 169px;
+  z-index: 1;
+}
+
+.hidden {
+  display: none;
+}
+
+.completedValidate {
+  background: #1d6154;
 }
