--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -175,6 +175,10 @@ nav li {
   font-size: 1.2em;
 }
 
+nav li img {
+  cursor: pointer;
+}
+
 .link,
 .login {
   text-decoration: none;
@@ -595,9 +599,7 @@ footer nav ul li {
   color: #3d3d3d;
   font-family: "Work Sans";
   font-size: 14px;
-  font-style: normal;
   font-weight: 700;
-  line-height: normal;
   margin-bottom: 10px;
 }
 
@@ -660,4 +662,13 @@ select {
 
 .completedValidate {
   background: #1d6154;
+}
+
+#errorMessage {
+  color: red;
+  font-family: "Work Sans";
+  font-size: 14px;
+  font-weight: 700;
+  padding-bottom: 15px;
+  margin: 0 auto;
 }
