--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -458,21 +458,16 @@ footer nav ul li {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(
-    0,
-    0,
-    0,
-    0.5
-  ); /* Opacité de fond (ajustez selon vos besoins) */
-  z-index: 999; /* Assurez-vous que l'overlay est au-dessus de tous les autres éléments */
-  display: none; /* Initialement masqué */
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: none;
 }
 
 .overlay.active {
-  display: block; /* Afficher l'overlay lorsque la classe active est présente */
+  display: block;
 }
 .overlay:not(.modalContainer) {
-  pointer-events: none; /* Ignorer les événements pointer (clics, etc.) sur l'overlay */
+  pointer-events: none;
 }
 .modalContainer {
   display: flex;
