--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -252,6 +252,7 @@ nav li img {
 .gallery img {
   width: 100%;
   height: 457px;
+  object-fit: cover;
 }
 #contact {
   width: 50%;
@@ -536,6 +537,7 @@ footer nav ul li {
 .actualGallery img {
   width: 78.123px;
   height: 104.08px;
+  object-fit: cover;
 }
 
 .fa-arrow-left {
